--- a/index.html
+++ b/index.html
@@ -2,77 +2,146 @@
 <html>
    <head>
       <meta charset="utf-8">
-      <link href="style2.css" rel="stylesheet">
+      <link rel="stylesheet" href="bootstrap.min.css" >
+      <link rel="stylesheet" href="style2.css" >
       <title>Вязань</title>
    </head>
    <body>
-      <div class="content">
-         <nav class="top-menu">
-            <a class="navbar-logo" href=""><img src="images/Group 3.png" </a>
-            <ul class="menu-main">
-               <li><a href="">На зиму</a></li>
-               <li><a href="">Демисезонная</a></li>
-               <li><a href="">Для дома</a></li>
-               <li><a href="">Спортивная</a></li>
-               <li><a href="">Блог</a></li>
-               <li><a href="">Корзина</a></li>
-            </ul>
-         </nav>
-         <table id="ctable">
-            <tr>
-               <td class="td-wide" colspan="2">
+      <section class="container-fluid bg-white">
+         <header class="position-static">
+            <div class="container">
+               <row class="row align-items-center">
+                  <div class="col-4"><a href="" class="navbar-brand"><img src="images/logo.png"alt="Logo" height="40"></a></div>
+                  <div class="col-8">
+                     <ul class="nav justify-content-end">
+                        <li class="nav-item"><a href="" class="nav-link text-dark">На зиму</a></li>
+                        <li class="nav-item"><a href="" class="nav-link text-dark">Демисезонная</a></li>
+                        <li class="nav-item"><a href="" class="nav-link text-dark">Для дома</a></li>
+                        <li class="nav-item"><a href="" class="nav-link text-dark">Спортивная</a></li>
+                        <li class="nav-item"><a href="" class="nav-link text-dark">Блог</a></li>
+                        <li class="nav-item"><a href=""><img src="images/basket.png" alt="Basket" height="30"></a></li>
+                     </ul>
+                  </div>
+               </row>
+            </div>
+         </header>
+         <section>
+            <container class="container">
+               <div class="row">
+                  <div class="col-12">
+                     <h1>Как производят безопасную шерстяную одежду</h1>
+                  </div>
+               </div>
+            </container>
+         </section>
+         <section>
+            <container class="container ">
+               <div class="row pt-3">
+                  <div class="col-8">
                   Секретами производства одежды из овечьей шерсти поделился  Иван Северный,
                   главный технолог фабрики «Вязань», автор книги «Шерсть для здоровья». Вы узнаете об обязательных этапах 
                   технологического процесса изготовления шерстяной одежды, а так же почему не стоит бояться аллергии на шерсть.
-               </td>
-               <td class="td-narrow" style='padding-left:60px'>
-                  <img src="images/Frame 178.png" width="188" height="191" alt="Иван Северный. Главный технолог">
-               </td>
-            </tr>
-            <tr>
-               <td class="td-narrow">
+                  </div>
+                  <div class="col-4 image-center">
+                     <img src="images/avatar.png" alt="Avatar" height="191" width="188">
+                     <p>Иван Северный. Главный технолог</p>
+                  </div>
+               </div>
+            </container>
+         </section>
+
+         <section>
+            <container class="container ">
+               <div class="row pt-2 pb-2">
+                  <div class="col-4">
                   <h2>Стрижка</h2>
                   <p>Овец стригут один раз в год, обычно весной. Руно в среднем весит 3–8 кг.
                      После стрижки животных осматривают, места порезов кожи дезинфицируют и следят за их заживлением. 
                      В случае обнаружения у овец каких-либо болезней их изолируют вотдельное помещение.
                   </p>
-               </td>
-               <td class="td-wide" colspan="2"style='padding-left:30px'>
-                  <img src="images/image 4.png" width="560" height="352" alt="Профессиональные машинки для стрижки овец не портят шерсть">
-               </td>
-            </tr>
-            <tr>
-               <td class="td-wide" colspan="2">
-                  <img src="images/Frame 129.png" width="560" height="435" alt="Специалисты вручную сортируют шерсть">
-               </td>
-               <td class="td-narrow">
-                  <h2>Сортировка</h2>
-                  <p>Сырье, которое получают после стрижки овец  подразделяют на тонкое, полутонкое или грубое. У каждого вида свои особые преимущества и области применения:
-                     Тонкое и полутонкое волокно  мягкое и легкое. Изделия из этого материала отличаются высоким качеством.
-                     Грубое волокно – огрубевшие волосы, жесткие и ломкие, не подходят для производства одежды его используют для изготовления войлока. Из войлока делают валенки, утеплитель, ковры и аксессуары.
-                     Специалисты вручную сортируют шерсть.
-                  </p>
-               </td>
-            </tr>
-            <tr >
-               <td class="td-wide" colspan="2">
-                  <h2>Бонус: аллегрию вызывает не шерсть</h2>
-                  <p>Эксперимент провели в 2001 году с участием 24 000 добровольцев, которые подозревали, что у них аллергия на шерсть.
-                     По результатам исследования, только у 1,7% диагноз был клинически подтвержден. Основным аллергеном выступала не сама шерсть. 
-                     Аллергия на шерсть происходит от паров ланолина — защитного воскового слоя, который покрывает каждую прядь овечьей шерсти. Виновниками реакции  так же оказались
-                     стиральный порошок, перхоть животных или пылевые клещи, присутствовавшие на шерстяной одежде.
-                  </p>
-               </td>
-               <td class="td-narrow" style='padding-top:64px'>
-			   
-                  <b>Проверить</b> реакцию организма на шерсть легко в домашних условиях.
-                  Если есть аллергические реакции на косметику с ланолином, то будут проявления и на шерсть.  
-               </td>
-            </tr>
-         </table>
-         <footer>
-            © Вязань, 2022
+                  </div>
+                  <div class="col-8">
+                     <img src="images/sheep.png" alt="Sheep" width="560" height="352">
+                     <p>Специалисты вручную сортируют шерсть</p>
+                  </div>
+               </div>
+            </container>
+         </section>
+
+         <section>
+            <container class="container">
+               <div class="row pt-3 pb-4">
+                  <div class="col-8">
+                     <img src="images/specialist.png" alt="Specialist" width="560" height="418">
+                     <p>Специалисты вручную сортируют шерсть</p>
+                  </div>
+                  <div class="col-4">
+                     <h2>Сортировка</h2>
+                     <p>Сырье, которое получают после стрижки овец  подразделяют на тонкое, полутонкое или грубое. У каждого вида свои особые преимущества и области применения:
+                        Тонкое и полутонкое волокно  мягкое и легкое. Изделия из этого материала отличаются высоким качеством.
+                        Грубое волокно – огрубевшие волосы, жесткие и ломкие, не подходят для производства одежды его используют для изготовления войлока. Из войлока делают валенки, утеплитель, ковры и аксессуары.
+                        Специалисты вручную сортируют шерсть.
+                     </p>
+                  </div>
+               </div>
+            </container>
+         </section>
+
+         <section class="bg-1">
+            <container class="container">
+               <div class="row pt-3 pb-4">
+                  <div class="col-12">
+                     <h2>Бонус: аллегрию вызывает не шерсть</h2>
+                  </div>
+                  <div class="col-8">
+                     <p>Эксперимент провели в 2001 году с участием 24 000 добровольцев, которые подозревали, что у них аллергия на шерсть.
+                        По результатам исследования, только у 1,7% диагноз был клинически подтвержден. Основным аллергеном выступала не сама шерсть. 
+                        Аллергия на шерсть происходит от паров ланолина — защитного воскового слоя, который покрывает каждую прядь овечьей шерсти. Виновниками реакции  так же оказались
+                        стиральный порошок, перхоть животных или пылевые клещи, присутствовавшие на шерстяной одежде.
+                     </p>
+                     <a href="">
+                        <!--<img src="images/instlogo.png" alt="NCBI" width="27" height="37">-->
+                        Эксперимент «Национального центра биотехнологической информации» о причинах аллегрии на шерсть
+                     </a>
+                  </div>
+                  <div class="col-4">                     
+                     <p><b>Проверить</b> реакцию организма на шерсть легко в домашних условиях.
+                        Если есть аллергические реакции на косметику с ланолином, то будут проявления и на шерсть. 
+                     </p>
+                     <!--<img src="images/check.png" alt="Check" width="276" height="158">-->
+                  </div>
+               </div>
+            </container>
+         </section>
+
+          <section>
+            <container class="container">
+               <div class="row pt-3 pb-4">
+                  <div class="col-8">
+                     <h2>Читать далее</h2>
+                     <a href="">
+                        Как выбрать шерстяную одежду которая не колется, и избежать раздражения на коже
+                     </a>
+                     <img src="images/choice.png" alt="choice" width="453" height="185">
+                  </div>
+               </div>
+            </container>
+         </section>
+
+         <footer class="footer">
+            <div class="container">
+               <row class="row align-items-center">
+                  <div class="col-4"><a href="" class="nav-link text-dark">© Вязань, 2022</a></div>
+                  <div class="col-8">
+                     <ul class="nav justify-content-end">
+                        <li class="nav-item"><a href=""><img src="images/socialnet.png" alt="Basket" height="30"></a></li>
+                     </ul>
+                  </div>
+               </row>
+            </div>
          </footer>
-      </div>
+
+      </section>
    </body>
+
 </html>
