--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    </head>
    <body>
       <section class="container-fluid bg-white">
+
          <header class="position-static">
             <div class="container">
                <row class="row align-items-center">
@@ -25,6 +26,7 @@
                </row>
             </div>
          </header>
+
          <section>
             <container class="container">
                <div class="row">
@@ -34,13 +36,14 @@
                </div>
             </container>
          </section>
+
          <section>
             <container class="container ">
                <div class="row pt-3">
                   <div class="col-8">
-                  Секретами производства одежды из овечьей шерсти поделился  Иван Северный,
-                  главный технолог фабрики «Вязань», автор книги «Шерсть для здоровья». Вы узнаете об обязательных этапах 
-                  технологического процесса изготовления шерстяной одежды, а так же почему не стоит бояться аллергии на шерсть.
+                     Секретами производства одежды из овечьей шерсти поделился  Иван Северный,
+                     главный технолог фабрики «Вязань», автор книги «Шерсть для здоровья». Вы узнаете об обязательных этапах 
+                     технологического процесса изготовления шерстяной одежды, а так же почему не стоит бояться аллергии на шерсть.
                   </div>
                   <div class="col-4 image-center">
                      <img src="images/avatar.png" alt="Avatar" height="191" width="188">
@@ -54,11 +57,11 @@
             <container class="container ">
                <div class="row pt-2 pb-2">
                   <div class="col-4">
-                  <h2>Стрижка</h2>
-                  <p>Овец стригут один раз в год, обычно весной. Руно в среднем весит 3–8 кг.
-                     После стрижки животных осматривают, места порезов кожи дезинфицируют и следят за их заживлением. 
-                     В случае обнаружения у овец каких-либо болезней их изолируют вотдельное помещение.
-                  </p>
+                     <h2>Стрижка</h2>
+                     <p>Овец стригут один раз в год, обычно весной. Руно в среднем весит 3–8 кг.
+                        После стрижки животных осматривают, места порезов кожи дезинфицируют и следят за их заживлением. 
+                        В случае обнаружения у овец каких-либо болезней их изолируют вотдельное помещение.
+                     </p>
                   </div>
                   <div class="col-8">
                      <img src="images/sheep.png" alt="Sheep" width="560" height="352">
@@ -86,47 +89,49 @@
                </div>
             </container>
          </section>
+         
+      </section>
 
-         <section class="bg-1">
-            <container class="container">
-               <div class="row pt-3 pb-4">
-                  <div class="col-12">
-                     <h2>Бонус: аллегрию вызывает не шерсть</h2>
-                  </div>
-                  <div class="col-8">
-                     <p>Эксперимент провели в 2001 году с участием 24 000 добровольцев, которые подозревали, что у них аллергия на шерсть.
-                        По результатам исследования, только у 1,7% диагноз был клинически подтвержден. Основным аллергеном выступала не сама шерсть. 
-                        Аллергия на шерсть происходит от паров ланолина — защитного воскового слоя, который покрывает каждую прядь овечьей шерсти. Виновниками реакции  так же оказались
-                        стиральный порошок, перхоть животных или пылевые клещи, присутствовавшие на шерстяной одежде.
-                     </p>
-                     <a href="">
-                        <!--<img src="images/instlogo.png" alt="NCBI" width="27" height="37">-->
-                        Эксперимент «Национального центра биотехнологической информации» о причинах аллегрии на шерсть
-                     </a>
-                  </div>
-                  <div class="col-4">                     
-                     <p><b>Проверить</b> реакцию организма на шерсть легко в домашних условиях.
-                        Если есть аллергические реакции на косметику с ланолином, то будут проявления и на шерсть. 
-                     </p>
-                     <!--<img src="images/check.png" alt="Check" width="276" height="158">-->
-                  </div>
+      <section class="bg-1">
+         <container class="container">
+            <div class="row pt-3 pb-4" style="padding-left:50px ;padding-right:100px;">
+               <div class="col-12">
+                  <h2>Бонус: аллегрию вызывает не шерсть</h2>
                </div>
-            </container>
-         </section>
+               <div class="col-8">
+                  <p>Эксперимент провели в 2001 году с участием 24 000 добровольцев, которые подозревали, что у них аллергия на шерсть.
+                     По результатам исследования, только у 1,7% диагноз был клинически подтвержден. Основным аллергеном выступала не сама шерсть. 
+                     Аллергия на шерсть происходит от паров ланолина — защитного воскового слоя, который покрывает каждую прядь овечьей шерсти. Виновниками реакции  так же оказались
+                     стиральный порошок, перхоть животных или пылевые клещи, присутствовавшие на шерстяной одежде.
+                  </p>
+                  <a href="">
+                     <!--<img src="images/instlogo.png" alt="NCBI" width="27" height="37">-->
+                     Эксперимент «Национального центра биотехнологической информации» о причинах аллегрии на шерсть
+                  </a>
+               </div>
+               <div class="col-4">
+                  <p><b>Проверить</b> реакцию организма на шерсть легко в домашних условиях.
+                     Если есть аллергические реакции на косметику с ланолином, то будут проявления и на шерсть. 
+                  </p>
+                  <!--<img src="images/check.png" alt="Check" width="276" height="158">-->
+               </div>
+            </div>
+         </container>
+      </section>
 
-          <section>
-            <container class="container">
-               <div class="row pt-3 pb-4">
-                  <div class="col-8">
-                     <h2>Читать далее</h2>
-                     <a href="">
-                        Как выбрать шерстяную одежду которая не колется, и избежать раздражения на коже
-                     </a>
-                     <img src="images/choice.png" alt="choice" width="453" height="185">
-                  </div>
+      <section class="container-fluid bg-white">
+
+         <container class="container">
+            <div class="row pt-3 pb-4">
+               <div class="col-8">
+                  <h2>Читать далее</h2>
+                  <a href="">
+                  Как выбрать шерстяную одежду которая не колется, и избежать раздражения на коже
+                  </a>
+                  <img src="images/choice.png" alt="choice" width="453" height="185">
                </div>
-            </container>
-         </section>
+            </div>
+         </container>
 
          <footer class="footer">
             <div class="container">
@@ -142,6 +147,6 @@
          </footer>
 
       </section>
-   </body>
 
+   </body>
 </html>
