--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                      главный технолог фабрики «Вязань», автор книги «Шерсть для здоровья». Вы узнаете об обязательных этапах 
                      технологического процесса изготовления шерстяной одежды, а так же почему не стоит бояться аллергии на шерсть.
                   </div>
-                  <div class="col-4 image-center">
-                     <img src="images/avatar.png" alt="Avatar" height="191" width="188">
-                     <p>Иван Северный. Главный технолог</p>
+                  <div class="col-4">
+                     <img src="images/avatar.png" class="float-right" alt="Avatar" height="191" width="188">
+                     <p class="float-right">Иван Северный, Главный технолог</p>                     
                   </div>
                </div>
             </container>
@@ -89,14 +89,14 @@
                </div>
             </container>
          </section>
-         
+
       </section>
 
       <section class="bg-1">
          <container class="container">
             <div class="row pt-3 pb-4" style="padding-left:50px ;padding-right:100px;">
                <div class="col-12">
-                  <h2>Бонус: аллегрию вызывает не шерсть</h2>
+                  <h3>Бонус: аллегрию вызывает не шерсть</h3>
                </div>
                <div class="col-8">
                   <p>Эксперимент провели в 2001 году с участием 24 000 добровольцев, которые подозревали, что у них аллергия на шерсть.
