--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
          <footer class="footer">
             <div class="container">
                <row class="row align-items-center">
-                  <div class="col-4"><a href="" class="nav-link text-dark">© Вязань, 2022</a></div>
+                  <div class="col-4"><a href="" class="nav-link text-dark pl-0">© Вязань, 2022</a></div>
                   <div class="col-8">
                      <ul class="nav justify-content-end">
                         <li class="nav-item"><a href=""><img src="images/socialnet.png" alt="Basket" height="30"></a></li>
