--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <p><b>Проверить</b> реакцию организма на шерсть легко в домашних условиях.
                      Если есть аллергические реакции на косметику с ланолином, то будут проявления и на шерсть. 
                   </p>
-                  <!--<img src="images/check.png" alt="Check" width="276" height="158">-->
+                  <img src="images/check.png" alt="Check" width="276" height="158" class="img-fluid rounded">
                </div>
             </div>
          </container>
@@ -128,7 +128,7 @@
                   <a href="">
                   Как выбрать шерстяную одежду которая не колется, и избежать раздражения на коже
                   </a>
-                  <img src="images/choice.png" alt="choice" width="453" height="185">
+                  <img src="images/choice.png" alt="choice" class="float-left" width="453" height="185">
                </div>
             </div>
          </container>
