--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                      стиральный порошок, перхоть животных или пылевые клещи, присутствовавшие на шерстяной одежде.
                   </p>
                   <a href="">
-                     <!--<img src="images/instlogo.png" alt="NCBI" width="27" height="37">-->
+                     <img src="images/instlogo.png" alt="NCBI" width="27" height="37">
                      Эксперимент «Национального центра биотехнологической информации» о причинах аллегрии на шерсть
                   </a>
                </div>
