--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                <div class="col-8">
                   <h2>Читать далее</h2>
                   <a href="">
-                  Как выбрать шерстяную одежду которая не колется, и избежать раздражения на коже
+                  <ins>Как выбрать шерстяную одежду которая не колется, и избежать раздражения на коже</ins>
                   </a>
                   <img src="images/choice.png" alt="choice" class="float-left" width="453" height="185">
                </div>
