--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   </div>
                   <div class="col-4">
                      <img src="images/avatar.png" class="float-right" alt="Avatar" height="191" width="188">
-                     <p class="float-right">Иван Северный, Главный технолог</p>                     
+                     <p class="float-left" style="padding-left:110px; text-align:center">Иван Северный,<br> Главный технолог</p>                      
                   </div>
                </div>
             </container>
