--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 
          <section>
             <container class="container ">
-               <div class="row pt-0 pb-4 align-items-center">
-                  <div class="col-8" style="padding-bottom: 70px">
+               <div class="row pt-3">
+                  <div class="col-8">
                      Секретами производства одежды из овечьей шерсти поделился  Иван Северный,
                      главный технолог фабрики «Вязань», автор книги «Шерсть для здоровья». Вы узнаете об обязательных этапах 
                      технологического процесса изготовления шерстяной одежды, а так же почему не стоит бояться аллергии на шерсть.
                   </div>
-                  <div class="col-4" >
+                  <div class="col-4">
                      <img src="images/avatar.png" class="float-right" alt="Avatar" height="191" width="188">
-                     <p class="float-left" style="padding-left:110px; text-align:center">Иван Северный,<br> Главный технолог</p>                     
+                     <p class="float-left" style="padding-left:110px; text-align:center">Иван Северный,<br> Главный технолог</p>                      
                   </div>
                </div>
             </container>
@@ -106,7 +106,7 @@
                   </p>
                   <a href="">
                      <img src="images/instlogo.png" alt="NCBI" width="27" height="37">
-                     Эксперимент «Национального центра биотехнологической информации» о причинах аллегрии на шерсть
+                     text-decoration: underline; Эксперимент «Национального центра биотехнологической информации» о причинах аллегрии на шерсть
                   </a>
                </div>
                <div class="col-4">
