--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   </p>
                   <a href="">
                      <img src="images/instlogo.png" alt="NCBI" width="27" height="37">
-                     text-decoration: underline; Эксперимент «Национального центра биотехнологической информации» о причинах аллегрии на шерсть
+                     Эксперимент «Национального центра биотехнологической информации» о причинах аллегрии на шерсть
                   </a>
                </div>
                <div class="col-4">
