--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
          <header class="position-static">
             <div class="container">
-               <row class="row align-items-center">
+               <row class="row align-items-center pl-0 pr-0">
                   <div class="col-4"><a href="" class="navbar-brand"><img src="images/logo.png"alt="Logo" height="40"></a></div>
                   <div class="col-8">
                      <ul class="nav justify-content-end">
@@ -39,15 +39,15 @@
 
          <section>
             <container class="container ">
-               <div class="row pt-3">
-                  <div class="col-8">
+               <div class="row pt-0 pb-4 align-items-center">
+                  <div class="col-8" style="padding-bottom: 70px">
                      Секретами производства одежды из овечьей шерсти поделился  Иван Северный,
                      главный технолог фабрики «Вязань», автор книги «Шерсть для здоровья». Вы узнаете об обязательных этапах 
                      технологического процесса изготовления шерстяной одежды, а так же почему не стоит бояться аллергии на шерсть.
                   </div>
-                  <div class="col-4">
+                  <div class="col-4" >
                      <img src="images/avatar.png" class="float-right" alt="Avatar" height="191" width="188">
-                     <p class="float-left" style="padding-left:110px; text-align:center">Иван Северный,<br> Главный технолог</p>                      
+                     <p class="float-left" style="padding-left:110px; text-align:center">Иван Северный,<br> Главный технолог</p>                     
                   </div>
                </div>
             </container>
@@ -104,7 +104,7 @@
                      Аллергия на шерсть происходит от паров ланолина — защитного воскового слоя, который покрывает каждую прядь овечьей шерсти. Виновниками реакции  так же оказались
                      стиральный порошок, перхоть животных или пылевые клещи, присутствовавшие на шерстяной одежде.
                   </p>
-                  <a href="">
+                  <a href="" class="a-ins">
                      <img src="images/instlogo.png" alt="NCBI" width="27" height="37">
                      Эксперимент «Национального центра биотехнологической информации» о причинах аллегрии на шерсть
                   </a>
@@ -125,8 +125,8 @@
             <div class="row pt-3 pb-4">
                <div class="col-8">
                   <h2>Читать далее</h2>
-                  <a href="">
-                  <ins>Как выбрать шерстяную одежду которая не колется, и избежать раздражения на коже</ins>
+                  <a href="" class="a-ins">
+                  Как выбрать шерстяную одежду которая не колется, и избежать раздражения на коже
                   </a>
                   <img src="images/choice.png" alt="choice" class="float-left" width="453" height="185">
                </div>
@@ -135,7 +135,7 @@
 
          <footer class="footer">
             <div class="container">
-               <row class="row align-items-center">
+               <row class="row pt-3 pb-4 align-items-center">
                   <div class="col-4"><a href="" class="nav-link text-dark pl-0">© Вязань, 2022</a></div>
                   <div class="col-8">
                      <ul class="nav justify-content-end">
