--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
                      стиральный порошок, перхоть животных или пылевые клещи, присутствовавшие на шерстяной одежде.
                   </p>
                   <a href="" class="a-ins">
-                     <img src="images/instlogo.png" alt="NCBI" width="27" height="37">
-                     Эксперимент «Национального центра биотехнологической информации» о причинах аллегрии на шерсть
+                     <img src="images/instlogo.png" alt="NCBI" width="27" height="37" 
+                     style="margin-right: 5px; margin-top: 5px;float:left;">
+                     Эксперимент «Национального центра биотехнологической<br> информации» о причинах аллегрии на шерсть
                   </a>
                </div>
                <div class="col-4">
