--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <container class="container ">
                <div class="row pt-0 pb-4 align-items-center">
                   <div class="col-8" style="padding-bottom: 70px">
-                     Секретами производства одежды из овечьей шерсти поделился  Иван Северный,
-                     главный технолог фабрики «Вязань», автор книги «Шерсть для здоровья». Вы узнаете об обязательных этапах 
-                     технологического процесса изготовления шерстяной одежды, а так же почему не стоит бояться аллергии на шерсть.
+Секретами производства одежды из&nbsp;овечьей шерсти поделился Иван Северный,
+главный технолог фабрики &laquo;Вязань&raquo;, автор книги &laquo;Шерсть для здоровья&raquo;. Вы&nbsp;узнаете об&nbsp;обязательных этапах 
+технологического процесса изготовления шерстяной одежды, а&nbsp;так&nbsp;же почему не&nbsp;стоит бояться аллергии на&nbsp;шерсть.
                   </div>
                   <div class="col-4" >
                      <img src="images/avatar.png" class="float-right" alt="Avatar" height="191" width="188">
