--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                <div class="row pt-2 pb-2">
                   <div class="col-4">
                      <h2>Стрижка</h2>
-                     <p>Овец стригут один раз в год, обычно весной. Руно в среднем весит 3–8 кг.
-                        После стрижки животных осматривают, места порезов кожи дезинфицируют и следят за их заживлением. 
-                        В случае обнаружения у овец каких-либо болезней их изолируют вотдельное помещение.
+                     <p>Овец стригут один раз в&nbsp;год, обычно весной. Руно в&nbsp;среднем весит 3&ndash;8&nbsp;кг.
+После стрижки животных осматривают, места порезов кожи дезинфицируют и&nbsp;следят за&nbsp;их&nbsp;заживлением. 
+В&nbsp;случае обнаружения у&nbsp;овец каких-либо болезней их&nbsp;изолируют вотдельное помещение.
                      </p>
                   </div>
                   <div class="col-8">
@@ -80,10 +80,10 @@
                   </div>
                   <div class="col-4">
                      <h2>Сортировка</h2>
-                     <p>Сырье, которое получают после стрижки овец  подразделяют на тонкое, полутонкое или грубое. У каждого вида свои особые преимущества и области применения:
-                        Тонкое и полутонкое волокно  мягкое и легкое. Изделия из этого материала отличаются высоким качеством.
-                        Грубое волокно – огрубевшие волосы, жесткие и ломкие, не подходят для производства одежды его используют для изготовления войлока. Из войлока делают валенки, утеплитель, ковры и аксессуары.
-                        Специалисты вручную сортируют шерсть.
+                     <p>Сырье, которое получают после стрижки овец подразделяют на&nbsp;тонкое, полутонкое или грубое. У&nbsp;каждого вида свои особые преимущества и&nbsp;области применения:
+Тонкое и&nbsp;полутонкое волокно мягкое и&nbsp;легкое. Изделия из&nbsp;этого материала отличаются высоким качеством.
+Грубое волокно&nbsp;&mdash; огрубевшие волосы, жесткие и&nbsp;ломкие, не&nbsp;подходят для производства одежды его используют для изготовления войлока. Из&nbsp;войлока делают валенки, утеплитель, ковры и&nbsp;аксессуары.
+Специалисты вручную сортируют шерсть.
                      </p>
                   </div>
                </div>
@@ -99,10 +99,10 @@
                   <h3>Бонус: аллегрию вызывает не шерсть</h3>
                </div>
                <div class="col-8">
-                  <p>Эксперимент провели в 2001 году с участием 24 000 добровольцев, которые подозревали, что у них аллергия на шерсть.
-                     По результатам исследования, только у 1,7% диагноз был клинически подтвержден. Основным аллергеном выступала не сама шерсть. 
-                     Аллергия на шерсть происходит от паров ланолина — защитного воскового слоя, который покрывает каждую прядь овечьей шерсти. Виновниками реакции  так же оказались
-                     стиральный порошок, перхоть животных или пылевые клещи, присутствовавшие на шерстяной одежде.
+                  <p>Эксперимент провели в&nbsp;2001 году с&nbsp;участием 24&nbsp;000&nbsp;добровольцев, которые подозревали, что у&nbsp;них аллергия на&nbsp;шерсть.
+По&nbsp;результатам исследования, только у&nbsp;1,7% диагноз был клинически подтвержден. Основным аллергеном выступала не&nbsp;сама шерсть. 
+Аллергия на&nbsp;шерсть происходит от&nbsp;паров ланолина&nbsp;&mdash; защитного воскового слоя, который покрывает каждую прядь овечьей шерсти. Виновниками реакции так&nbsp;же оказались
+стиральный порошок, перхоть животных или пылевые клещи, присутствовавшие на&nbsp;шерстяной одежде.
                   </p>
                   <a href="" class="a-ins">
                      <img src="images/instlogo.png" alt="NCBI" width="27" height="37" 
@@ -111,8 +111,8 @@
                   </a>
                </div>
                <div class="col-4">
-                  <p><b>Проверить</b> реакцию организма на шерсть легко в домашних условиях.
-                     Если есть аллергические реакции на косметику с ланолином, то будут проявления и на шерсть. 
+                  <p><b>Проверить</b> реакцию организма на&nbsp;шерсть легко в&nbsp;домашних условиях.
+Если есть аллергические реакции на&nbsp;косметику с&nbsp;ланолином, то&nbsp;будут проявления и&nbsp;на&nbsp;шерсть.
                   </p>
                   <img src="images/check.png" alt="Check" width="276" height="158" class="img-fluid rounded">
                </div>
